<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyBBRjynN80G_I1dD4QxjzJlBkPM_HQBS2I</string>
    <string name="tom_tom_key" templateMergeStrategy="preserve">dow3JGa0V8YI7ABV7VGmStu0JlJLXEg3</string>
    <string name="facebook_app_id">1459597228217742</string>
    <string name="fb_login_protocol_scheme">fb1459597228217742</string>
    <string name="facebook_client_token">86d3e326ccabd6b54ef1258edac47b5d</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="app_name" translatable="false">Techres - Senior Sociable</string>
    <string name="start">Bắt đầu</string>
    <string name="version">Phiên bản</string>
    <string name="update_title_version">Phiên bản mới</string>
    <string name="update_content">Cập nhật nội dung</string>
    <string name="version_update"> Để sau</string>
    <string name="update_yes_version">Cập nhật ngay</string>
    <string name="token_expired">Phiên đăng nhập hết hạn. Vui lòng đăng nhập lại</string>
    <string name="loading">Đang tải…</string>
    <string name="search">Tìm kiếm</string>
    <string name="cancel_upload">Hủy</string>
    <string name="uploading">Tiến trình - [[PROGRESS]]</string>
    <string name="upload_success">Tải thành công trong [[ELAPSED_TIME]]</string>
    <string name="upload_error">Lỗi xảy ra khi tải lên</string>
    <string name="multipart_upload">Tải lên Server</string>
    <string name="upload_cancelled">Trình tải lên đã hủy</string>
    <string name="enter_quantity">Nhập số lượng</string>
    <string name="zero">0</string>
    <string name="clear">C</string>
    <string name="decrease">Giảm</string>
    <string name="increase">Tăng</string>
    <string name="done">Xong</string>
    <string name="common_loading">Đang tải&#8230;</string>
    <string name="common_confirm">Xác nhận</string>
    <string name="common_cancel">Hủy bỏ</string>
    <string name="status_layout_no_data">Trống rỗng</string>
    <string name="status_layout_error_request">Yêu cầu lỗi, vui lòng thử lại</string>
    <string name="status_layout_error_network">Lỗi mạng, vui lòng thử lại</string>
    <string name="status_layout_retry">Thử lại</string>
    <string name="from">Từ</string>
    <string name="to">Đến</string>
    <string name="common_network_error">Mạng hiện tại không khả dụng, vui lòng kiểm tra cài đặt mạng</string>
    <string name="common_no_more_data">Không có thêm dữ liệu</string>
    <string name="common_web_ssl_error_title">Chứng chỉ bảo mật trang web hiện tại đã hết hạn hoặc không đáng tin cậy\nTiếp tục duyệt</string>
    <string name="common_web_ssl_error_allow">Tiếp tục</string>
    <string name="common_web_ssl_error_reject">Quay lại</string>
    <string name="common_web_call_phone_title">Số lượng hiện tại %s</string>
    <string name="common_web_call_phone_allow">Quay số</string>
    <string name="common_web_call_phone_reject">Hủy bỏ</string>
    <string name="http_data_explain_error">Ngoại lệ phân tích cú pháp dữ liệu, vui lòng đợi</string>
    <string name="http_server_out_time">Không có phản hồi từ máy chủ</string>
    <string name="http_network_error">Yêu cầu không thành công, vui lòng kiểm tra cài đặt mạng</string>
    <string name="http_response_error">Máy chủ phản hồi bất thường, vui lòng thử lại sau</string>
    <string name="http_server_error">Lỗi kết nối máy chủ, vui lòng thử lại sau</string>
    <string name="http_request_cancel">Yêu cầu đã bị gián đoạn, vui lòng thử lại</string>
    <string name="http_response_null_body">Dữ liệu máy chủ trả về ngoại lệ, vui lòng thử lại sau</string>
    <string name="http_response_md5_error">Tải xuống không thành công, xác minh tệp md5 không thành công</string>
    <string name="monday">Thứ 2</string>
    <string name="tuesday">Thứ 3</string>
    <string name="wednesday">Thứ 4</string>
    <string name="thursday">Thứ 5</string>
    <string name="friday">Thứ 6</string>
    <string name="saturday">Thứ 7</string>
    <string name="sunday">Chủ nhật</string>
    <string name="today">Hôm nay</string>
    <string name="yesterday">Hôm qua</string>
    <string name="this_week">Tuần này</string>
    <string name="this_month">Tháng này</string>
    <string name="last_month">Tháng trước</string>
    <string name="three_months">3 tháng gần nhất</string>
    <string name="this_year">Năm nay</string>
    <string name="last_year">Năm trước</string>
    <string name="three_years">3 năm gần nhất</string>
    <string name="all_years">Tất cả các năm</string>
    <string name="day_to_day">Ngày đến ngày</string>
    <string name="month_to_month">Tháng đến tháng</string>
    <string name="year_to_year">Năm đến năm</string>
    <string name="chat">Tin nhắn </string>
    <string name="notification">Thông báo</string>
    <string name="account">Tài Khoản</string>
    <string name="no_support">Tài khoản của bạn hiện tại không hỗ trợ tính năng này</string>
    <string name="no_data">Hiện tại không có dữ liệu</string>
    <string name="data_empty">Không có dữ liệu</string>
    <string name="please_update_level">Vui lòng nâng cấp Tài khoản để trải nghiệm!</string>
    <string name="please_update_data">Vui lòng cập nhật nội dung để trải nghiệm!</string>
    <string name="default_image">Default image</string>
    <string name="company_name"> Tên nhà cung cấp </string>
    <string name="res_name_min_characters">* Tên nhà cung cấp phải lớn hơn 2 và tối đa 50 kí tự</string>
    <string name="res_acount_min_characters">* Tên tài khoản phải lớn hơn 8 và tối đa 10  kí tự</string>
    <string name="password"> Mật Khẩu</string>
    <string name="res_password_min_characters">* Mật Khẩu phải lớn hơn 4 tối đa 10 kí tự</string>
    <string name="res_null_account_characters">* Tài khoản không được để trống</string>
    <string name="res_null_company_characters">* Tên nhà cung cấp không được để trống</string>
    <string name="res_null_password_characters">* Mật khẩu không được để trống</string>
    <string name="load_success">Tải ảnh thành công </string>
    <string name="load_fail">Tải ảnh thất bại </string>
    <string name="length_min">Độ dài tối thiểu 2 ký tự </string>
    <string name="length_max">Độ dài tối đa 50 ký tự </string>
    <string name="length_max_12">Độ dài tối đa 12 ký tự </string>
    <string name="name_regulation_char">Độ dài từ 2 đến 50 kí tự  </string>
    <string name="min_price">Số tiền tối thiểu 100 </string>
    <string name="change_not_data">Dữ liệu chưa được thay đổi</string>
    <string name="min_age">Tuổi phải lớn hơn hoặc bằng 16 </string>
    <string name="fingerprint_authentication">Xác thực vân tay cho ứng dụng của bạn </string>
    <string name="login_biometric">Đăng nhập bằng thông tin sinh trắc học của bạn </string>
    <string name="using_account_password_your">Sử dụng mật khẩu tài khoản của bạn  </string>
    <string name="no_fingerprint">Thiết bị không có cảm biến vân tay  </string>
    <string name="fingerprint_unavailable">Cảm biến vân tay không khả dụng hiện tại  </string>
    <string name="unregistered_fingerprint">Thiết bị có cảm biến vân tay nhưng không có vân tay nào được đăng ký </string>
    <string name="security_update">Cần cập nhật bảo mật trên thiết bị </string>
    <string name="no_fingerprint_authentication_device">Xác thực vân tay không được hỗ trợ trên thiết bị này </string>
    <string name="fingerprint_authentication_status_unknown">Trạng thái xác thực vân tay không xác định </string>
    <string name="information_staff"> Thông tin nhân viên </string>
    <string name="branch">Chi nhánh</string>
    <string name="id_staff">Mã nhân viên</string>
    <string name="staff_siver">N.V Nhận</string>
    <string name="staff_ship">N.V Giao</string>
    <string name="id_supplier">Mã doanh nghiệp</string>
    <string name="tax_code">Mã số thuế</string>
    <string name="name_supplier">Tên doanh nghiệp</string>
    <string name="email_supplier">E-mail doanh nghiệp</string>
    <string name="business_model">Mô hình kinh doanh</string>
    <string name="business_model_text">Kinh doanh rau củ quả</string>
    <string name="competence">Chức vụ</string>
    <string name="citizen_identification">CCCD</string>
    <string name="gender">Giới tính</string>
    <string name="cellphone">Số điện thoại </string>
    <string name="birthday">Sinh nhật </string>
    <string name="revenue_management">Quản lý thu</string>
    <string name="expenditure_management">Quản lý chi</string>
    <string name="revenue_expenditure_management">Quản lý thu/chi</string>
    <string name="category_management">Quản lý hạng mục</string>
    <string name="bill_revenue_management">Phiếu thu </string>
    <string name="bill_expenditure_management">Phiếu chi</string>
    <string name="wait_processing">Chờ xác nhận</string>
    <string name="import_warehouse">Nhập kho</string>
    <string name="export_warehouse">Xuất kho</string>
    <string name="other_cost">Chi phí khác</string>
    <string name="complete">Hoàn tất </string>
    <string name="cancelled">Đã hủy</string>
    <string name="sum_item">Tổng mặt hàng</string>
    <string name="people_create">Người tạo</string>
    <string name="staff_create">N.V tạo</string>
    <string name="status">Trạng thái</string>
    <string name="status_two_dot">Trạng thái:</string>
    <string name="note">Ghi chú</string>
    <string name="category_bill">Hạng mục </string>
    <string name="name_category_bill">Tên hạng mục </string>
    <string name="pause_category">Ngưng</string>
    <string name="edit_category">Chỉnh sửa </string>
    <string name="object">Đối tượng</string>
    <string name="bill_revenue">Phiếu thu</string>
    <string name="bill_expenditure">Phiếu chi</string>
    <string name="other_revenue">Khoản thu khác</string>
    <string name="other_expenditure">Khoản chi khác</string>
    <string name="auto">Tự động</string>
    <string name="no_note_auto">Không có ghi chú cho đơn hàng tự động</string>
    <string name="bill_out">Thu tay</string>
    <string name="bill_category">Loại phiếu</string>
    <string name="bill_code">Mã phiếu</string>
    <string name="login">Đăng nhập</string>
    <string name="login_fail">Đăng nhập thất bại </string>
    <string name="logout">Đăng xuất</string>
    <string name="head_confirm_logout">Đăng xuất tài khoản</string>
    <string name="name_app_confirm_logout">Senior Sociable</string>
    <string name="login_setting">Thiết lập đăng nhập </string>
    <string name="save">Lưu lại</string>
    <string name="confirm">Xác nhận</string>
    <string name="home">Trang chủ</string>
    <string name="news">Tin tức</string>
    <string name="watch">Thước phim</string>
    <string name="status_public">Công khai</string>
    <string name="choose_location">Thêm vị trí</string>
    <string name="object_of_posts">Đối tượng của bài viết</string>
    <string name="who_can_see_this_post">Ai có thể xem bài viết này?</string>
    <string name="content_who_can_see_this_post">Bài viết này được có thể được hiển thị ở Bảng tin, Trang cá nhân và kết quả tìm kiếm</string>
    <string name="content_status_post">Bạn có thể thay đổi bài viết này cho nhóm đối tượng mà bạn muốn chia sẻ bằng cách chọn đối tượng bên dưới</string>
    <string name="choose_object">Chọn đối tượng</string>
    <string name="description_status_public">Chia sẻ với mọi người trên Senior Sociable</string>
    <string name="status_private">Chỉ mình tôi</string>
    <string name="description_status_private">Chỉ mình bạn có thể xem</string>
    <string name="status_friend">Bạn bè</string>
    <string name="description_status_friend">Bạn bè của bạn trên Senior Sociable</string>
    <string name="create_album">Tạo album mới</string>
    <string name="input_name_album">Tên album</string>
    <string name="not_found">Không có dữ liệu</string>
    <string name="setting">Cài đặt</string>
    <string name="hobbies">Sở thích</string>
    <string name="is_selected">Đã chọn:</string>
</resources>