<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.hjq.bar.TitleBar
        android:id="@+id/tbUserTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/choose_location"
        app:lineSize="@dimen/dp_2"
        app:lineDrawable="@color/gray_200"
        app:leftIcon="@drawable/ic_arrow_start"
        app:leftIconTint="@color/blue_700"
        app:titleColor="@color/blue_700"
        app:rightTitle="@string/save"
        app:rightTitleStyle="bold"
        app:rightTitleColor="@color/color_text_selected"
        app:titleStyle="bold" />
    <androidx.appcompat.widget.SearchView
        android:id="@+id/svSearch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_32"
        android:layout_marginHorizontal="@dimen/dp_8"
        android:layout_marginVertical="@dimen/dp_8"
        android:background="@drawable/bg_gray_200_no_stroke"
        android:gravity="center_vertical"
        android:theme="@style/SearchView"
        app:closeIcon="@drawable/ic_cross"
        app:iconifiedByDefault="false"
        app:queryBackground="@android:color/transparent"
        app:queryHint="@string/search"
        app:searchIcon="@drawable/ic_search" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/gray_200"/>
    <LinearLayout
        android:id="@+id/llSelected"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <vn.xdeuhug.seniorsociable.widget.AppTextViewBold
            android:id="@+id/tvSelected"
            android:layout_marginStart="@dimen/dp_8"
            android:textColor="@color/black"
            android:text="@string/is_selected"
            android:layout_width="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_height="wrap_content"/>
        <include
            android:id="@+id/locationSelected"
            layout="@layout/item_place"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:background="@color/gray_200"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <RelativeLayout
        android:id="@+id/rlBackgroundNotFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imvNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/default_image"
            android:scaleType="fitXY"
            android:src="@drawable/ic_empty" />

        <vn.xdeuhug.seniorsociable.widget.AppTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imvNotFound"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center"
            android:text="@string/not_found"
            android:textAllCaps="true" />
    </RelativeLayout>

</LinearLayout>