<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_border_dialog"
    android:orientation="vertical">

    <com.hjq.bar.TitleBar
        android:id="@+id/tbAddAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftIcon="@drawable/ic_close"
        app:leftIconTint="@color/gray_900"
        app:lineDrawable="@color/gray_200"
        app:lineSize="@dimen/dp_2"
        android:background="@null"
        app:title="@string/create_album"
        app:titleStyle="bold" />

    <vn.xdeuhug.seniorsociable.widget.AppEditText
        android:id="@+id/edtName"
        style="@style/EditTextStyle"
        android:background="@drawable/bg_border_gray_stroke"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_name_album"
        android:layout_marginHorizontal="@dimen/dp_8"
        android:layout_marginVertical="@dimen/dp_8"
        android:paddingVertical="@dimen/dp_8"
        android:paddingHorizontal="@dimen/dp_16"
        android:singleLine="true" />

    <vn.xdeuhug.seniorsociable.widget.AppTextView
        android:id="@+id/tvErrorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:padding="@dimen/dp_4"
        android:text="@string/res_name_min_characters"
        android:textColor="@color/red_600"
        android:textSize="@dimen/sp_12"
        android:visibility="gone" />

    <vn.xdeuhug.seniorsociable.widget.AppButtonBold
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_login_selector"
        android:padding="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_4"
        android:text="@string/confirm"
        android:textColor="@color/white" />
</LinearLayout>