<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/dp_8"
    app:cardElevation="@dimen/dp_0_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_152"
            android:background="@drawable/check_update">

            <vn.xdeuhug.seniorsociable.widget.AppTextView
                android:id="@+id/tvTitleUpdateVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_48"
                android:text="@string/update_title_version"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNameUpdateVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTitleUpdateVersion"
                android:layout_marginStart="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/version"
                android:textColor="@color/white" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_88"
            android:orientation="vertical">

            <vn.xdeuhug.seniorsociable.widget.AppTextViewBold
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:text="@string/update_content"
                android:textColor="@color/black" />

            <vn.xdeuhug.seniorsociable.widget.AppTextView
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_24"
                android:text="@string/update_content"
                android:textSize="@dimen/sp_10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <vn.xdeuhug.seniorsociable.widget.AppButtonBold
                android:id="@+id/btnLater"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray_200"
                android:text="@string/version_update"
                android:textAllCaps="true"
                android:textColor="@color/red_300"
                android:textSize="@dimen/sp_14" />

            <vn.xdeuhug.seniorsociable.widget.AppButtonBold
                android:id="@+id/btnUpdateNow"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/blue_button"
                android:text="@string/update_yes_version"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>